# axon

./: README.md  all_code.md  main.py  output.py  pyproject.toml  test.http
alembic/: env.py
alembic/versions/: 0a62f3c1f0e3_init_tables.py  0d1e4efca26b_create_initial_tables.py  19e9627ff7cf_create_initial_tables.py  1fd4ee40a51e_init_tables.py  fc919ce8b3c3_create_initial_tables.py
core/: config.py  exceptions.py  session.py
core/api/: dependencies.py
core/api/controller/: tasks.py
core/api/routes/: __init__.py  processes.py  schedules.py  tasks.py  tasks_audit.py  tasks_chat.py  tasks_history.py
core/components/: __init__.py  boker.py  broker.py  cache.py
core/config/: __init__.py  settings.py
core/context/: __init__.py
core/crud/: __init__.py  tasks.py  tasks_metadata.py
core/database/: cache.py  connection.py
core/func/: datetime.py
core/globals/: __init__.py
core/middeleware/: __init__.py  context.py  monitor.py
core/middleware/: monitor.py
core/models/: enums.py  model.py
core/models/db/: __init__.py  base.py  tasks.py  tasks_audit.py  tasks_chat.py  tasks_history.py  tasks_metadata.py
core/models/http/: __init__.py  base.py  tasks.py  tasks_audit.py  tasks_chat.py  tasks_history.py  tasks_metadata.py
core/models/services/: __init__.py  base.py  tasks.py  tasks_audit.py  tasks_chat.py  tasks_history.py  tasks_metadata.py
core/scheduler/: __init__.py  dispatch.py
core/services/: tasks.py  tasks_audit.py  tasks_chat.py  tasks_history.py
core/utils/: context.py  decorators.py  enums.py  logger.py
tests/: task-api.http
(+7 files in other folders)
