[project]
name = "Taxonsk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.3",
    "colorlog>=6.9.0",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.116.0",
    "pydantic-settings>=2.10.1",
    "pydantic>=2.11.7",
    "socksio>=1.0.0",
    "uvicorn>=0.35.0",
    "asyncmy>=0.2.10",
    "pymysql>=1.1.1",
    "cryptography>=45.0.5",
    "ruff>=0.12.4",
    "sqlalchemy>=2.0.41",
    "greenlet>=3.2.3",
    "pyinstrument>=5.0.3",
    "redis[hiredis]>=6.2.0",
    "asyncio-atexit>=1.0.1",
]
